hnc/admin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication
  namespace: admin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
        - name: authentication
          image:
            valueFrom:
              configMapKeyRef:
                name: tenant-config
                key: IMAGE_AUTHENTICATION
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant
  namespace: admin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tenant
  template:
    metadata:
      labels:
        app: tenant
    spec:
      containers:
        - name: tenant
          image:
            valueFrom:
              configMapKeyRef:
                name: tenant-config
                key: IMAGE_TENANT
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"
