hnc/admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication
  namespace: admin
spec:
  type: NodePort
  selector:
    app: authentication
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080

---
apiVersion: v1
kind: Service
metadata:
  name: tenant
  namespace: admin
spec:
  type: NodePort
  selector:
    app: tenant
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 30080
