hnc/admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: admin
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: admin-ingress
  rules:
    - http:
        paths:
          - path: /auth(/+|)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: authentication
                port:
                  number: 8000
          - path: /tenant(/+|)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tenant
                port:
                  number: 8001
